// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-draggable-list-field Renders \`c-draggable-list-field\` with custom props 1`] = `
<draggable-stub
  animation="2"
  clone="[Function]"
  disabled="true"
  draggable=">*"
  element="div"
  ghost-class="grey"
  tag="span"
  value="[object Object],[object Object],[object Object]"
>
  <div
    class="custom-class"
  >
    Custom slot
  </div>
</draggable-stub>
`;

exports[`c-draggable-list-field Renders \`c-draggable-list-field\` with default props 1`] = `
<draggable-stub
  animation="300"
  clone="[Function]"
  draggable=">*"
  element="div"
  ghost-class="grey"
  value=""
/>
`;
